[package]
name = "connect4"
version = "0.1.0"
authors = ["YoEight <yo.eight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { features = ["serde"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
eventstore = { version = "0.8.1", features = ["es6"] }
tokio = { version = "0.2.22", features = ["macros"] }
